add header and resume pdf

--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 </head>
 <body class="w3-light-grey">
 
-<!-- Page Container -->
+<!-- Links (sit on top) -->
+<div class="w3-margin-bottom">
+  <div class="w3-row w3-large w3-teal">
+    <div class="w3-right w3-hide-small">
+      <a href="./pdfs/matthew-kersting-resume.pdf" class="w3-bar-item w3-button">RESUME</a>
+    </div>
+  </div>
+</div>
+
 <div class="w3-content w3-margin-top" style="max-width:1400px;">
 
   <!-- The Grid -->
@@ -32,7 +40,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Machine Learning Engineer</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Alexandria, VA</p>
-          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>matthew.kersting@pm.me</p>
+          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="mailto:matthew.kersting@pm.me">matthew.kersting@pm.me</a></p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+1 304.216.7147</p>
           <hr>
 
@@ -60,7 +68,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Programming Languages</b></p>
           <p>Python</p>
           <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
+            <div class="w3-round-xlarge w3-teal" style="height:24px;width:90%"></div>
           </div>
           <p>Javascript</p>
           <div class="w3-light-grey w3-round-xlarge">
@@ -139,6 +147,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 </div>
 
 <footer class="w3-container w3-teal w3-center w3-margin-top">
+  <p>Other places you can find me on the internet</p>
+  <a href="https://github.com/matthew-kersting"><i class="fa fa-github w3-hover-opacity"></i></a>
+  <a href="https://www.linkedin.com/in/matthew-kersting-066289109/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
 </footer>
 
 </body>
