add about me section

--- a/index.html
+++ b/index.html
@@ -91,7 +91,14 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
     <!-- Right Column -->
     <div class="w3-twothird">
-    
+      <div class="w3-container w3-card w3-white w3-margin-bottom">
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-user fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>About</h2>
+        <div class="w3-container">
+          <p>Welcome to my corner of the web! I'm a machine learning engineer with a interest for all things tech. Whether it's data engineering, developing web applications, or getting into cutting-edge research.</p>
+          <p>Currently, my focus lies in the realms of web scraping and data curation. I like to efficiently crawl the web, gathering valuable insights and organize information effectively to drive outcomes.</p>
+          <p></p>
+        </div>
+      </div>
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
         <div class="w3-container">
