--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
           </div>
-          <br>
+          <hr>
 
           <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Programming Languages</b></p>
           <p>Python</p>
@@ -78,13 +78,37 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <div class="w3-light-grey w3-round-xlarge">
             <div class="w3-round-xlarge w3-teal" style="height:24px;width:70%"></div>
           </div>
+          <p>SQL</p>
+          <div class="w3-light-grey w3-round-xlarge">
+            <div class="w3-round-xlarge w3-teal" style="height:24px;width:70%"></div>
+          </div>
           <p>Go</p>
           <div class="w3-light-grey w3-round-xlarge">
             <div class="w3-round-xlarge w3-teal" style="height:24px;width:20%"></div>
           </div>
+          <hr>
+
+          <p class="w3-large w3-text-theme"><b><i class="fa fa-wrench fa-fw w3-margin-right w3-text-teal"></i>Tools</b></p>
+          <ul class="w3-list">
+            <li>Pytorch</li>
+            <li>Express.js</li>
+            <li>FastAPI</li>
+            <li>Springboot</li>
+            <li>PostgreSQL</li>
+            <li>Git</li>
+            <li>Elasticsearch</li>
+            <li>Kafka</li>
+            <li>Spark</li>
+            <li>AWS</li>
+            <li>Docker</li>
+            <li>Kubernetes</li>
+            <li>Jenkins</li>
+            <li>Github Actions</li>
+          </ul>
           <br>
         </div>
-      </div><br>
+      </div>
+      <br>
 
     <!-- End Left Column -->
     </div>
@@ -94,9 +118,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-user fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>About</h2>
         <div class="w3-container">
-          <p>Welcome to my corner of the web! I'm a machine learning engineer with a interest for all things tech. Whether it's data engineering, developing web applications, or getting into cutting-edge research.</p>
-          <p>Currently, my focus lies in the realms of web scraping and data curation. I like to efficiently crawl the web, gathering valuable insights and organize information effectively to drive outcomes.</p>
-          <p></p>
+          <p>Greetings! I'm a machine learning engineer with a interest for all things tech. Most of my professional work has been developing web apps that deploy ML services, but I have also done UI design, CI/CD work and Data Engineering.</p>
+          <p>Currently, I am focused on web scraping and data curation. I use tools like Scrapy and BeautifulSoup to scrape the web and organize data effectively. Then I deploy ETL jobs to make that data readily accessible for end-users.</p>
+          <p>My interests span the tech world. I try to keep track of a number of areas that I think could have big implications or are simply neat such as neuromorphic computing, distributed systems research and homomorphic encryption (and AI of course, but that is kind of mainstream these days).</p>
+          <p>Feel free to shoot me an email if you want to chat! I always enjoy hearing from random people on the other side of the internet.</p>
         </div>
       </div>
       <div class="w3-container w3-card w3-white w3-margin-bottom">
@@ -104,6 +129,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Staff Machine Learning Engineer / Booz Allen Hamilton</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2024 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+          <p>Performed as a Data Engineer for a prominent Enterprise data platform, utilized web scraping tools to gather documents, extract metadata, and organize data within AWS with automated jobs</p>
           <p>Developed a full-stack document management solution deployed via Kubernetes, including backend/frontend development, web server optimization, testing enhancements, and database architecture</p>
           <p>Implemented Security Technical Implementation Guidelines (STIGs) to ensure compliance and help facilitate the attainment of Authority to Operate (ATO)</p>
           <hr>
@@ -112,6 +138,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h5 class="w3-opacity"><b>Software Engineer, Machine Learning / Noblis</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2021 - Dec 2023</h6>
           <p>Tech-lead for an R&D project providing computer-vision capabilities to aid child exploitation investigations </p>
+          <p>Engineered a secure and scalable Spring Boot web application which brings to production a variety of speech technology and machine learning capabilities to aid in investigative triage</p>
           <p>Led a research initiative focused on developing a Data Lakehouse solution for Noblis, including management of data infrastructure, construction of ETL pipelines, and the deployment of a large language model internally</p>
           <p>Engaged directly with stakeholders, translated feedback into system requirements and helped lead the development of a microservice web application including system design, front-end development, back-end development, data modeling, database design, machine learning model integration and CI/CD integration</p>
           <hr>
@@ -120,13 +147,15 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h5 class="w3-opacity"><b>Graduate Research Assistant / Department of Medical Engineering - University of South Florida</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2019 - Dec 2020</h6>
           <p>Performed image segmentation and analysis on biological datasets leading to new principles of neural circuitry</p>
-          <p>Mentored multiple undergraduate researchers in the lab and assisted in course delivery</p>
+          <p>Directed multiple undergraduate researchers as they participated in the lab for summer internships and undergraduate theses</p>
+          <p>Assisted in course delivery, including giving lectures on machine learning in neuroscience and tutoring students</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Undergraduate Research Assistant / Rockefeller Neuroscience Institute - West Virginia University</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2019 - Dec 2020</h6>
           <p>Analyzed and quantified large biological image datasets and discovered novel properties of neuronal interactions</p>
+          <p>Developed Python scripts to automate data collection processes</p>
         </div>
       </div>
       <div class="w3-container w3-card w3-white">
@@ -135,12 +164,15 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h5 class="w3-opacity"><b>University of South Florida</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2019 - 2020</h6>
           <p>Master of Science in Biomedical Engineering</p>
+          <p>Coursework: Digital Image Processing, Intro to Algorithms, Engineering Physiology, & Medical Imaging</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>West Virginia University</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2015 - 2019</h6>
-          <p>Bachelor of Science in Biology with an Emphasis in Neuroscience</p><br>
+          <p>Bachelor of Science in Biology with an Emphasis in Neuroscience</p>
+          <p>Coursework: Python for Data Science, Object-Oriented Programming, Systems Neuroscience, & Molecular Neuroscience</p>
+          <br>
         </div>
       </div>
 
@@ -154,7 +186,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 </div>
 
 <footer class="w3-container w3-teal w3-center w3-margin-top">
-  <p>Other places you can find me on the internet</p>
+  <p>Other places you can find me on the web</p>
   <a href="https://github.com/matthew-kersting"><i class="fa fa-github w3-hover-opacity"></i></a>
   <a href="https://www.linkedin.com/in/matthew-kersting-066289109/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
 </footer>
