add jhu education

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-user fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>About</h2>
         <div class="w3-container">
-          <p>Greetings! I'm a machine learning engineer with an interest for all things tech. Most of my professional work has been developing web apps that deploy ML services, but I have also done UI design, CI/CD work and Data Engineering.</p>
+          <p>Greetings! I'm a machine learning engineer and applied mathematics graduate student with an interest for all things tech. Most of my professional work has been developing web apps that deploy ML services, but I have also done UI design, CI/CD work and Data Engineering.</p>
           <p>Currently, I am focused on web scraping and data curation. I use tools like Scrapy and BeautifulSoup to scrape the web and organize data effectively. Then I deploy ETL jobs to make that data readily accessible for end-users.</p>
           <p>My interests span the tech world. I try to keep track of a number of areas that I think could have big implications or are simply neat, such as neuromorphic computing, distributed systems research and homomorphic encryption (and AI of course, which is somewhat mainstream these days).</p>
           <p>Feel free to shoot me an email if you want to chat! I always enjoy hearing from random people on the other side of the internet.</p>
@@ -162,6 +162,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       </div>
       <div class="w3-container w3-card w3-white">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Johns Hopkins Whiting School of Engineering</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2024 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+          <p>Graduate Certificate in Applied and Computational Mathematics</p>
+          <p>Coursework: Statistical Methods and Data Analysis</p>
+          <hr>
+        </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>University of South Florida</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2019 - 2020</h6>
