fix header overlaying content

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <body class="w3-light-grey">
 
 <!-- Links (sit on top) -->
-<div class="w3-margin-bottom w3-top">
+<div class="w3-margin-bottom">
   <div class="w3-row w3-large w3-teal">
     <div class="w3-right w3-hide-small">
       <a href="./index.html" class="w3-bar-item w3-button">HOME</a>
