--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <div class="w3-right w3-hide-small">
       <a href="./index.html" class="w3-bar-item w3-button">HOME</a>
       <a href="./html/research.html" class="w3-bar-item w3-button">RESEARCH</a>
+      <a href="./html/blog/blog.html" class="w3-bar-item w3-button">BLOG</a>
       <a href="./pdfs/matthew-kersting-resume.pdf" class="w3-bar-item w3-button">RESUME</a>
     </div>
   </div>
