--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <div class="w3-light-grey w3-round-xlarge">
             <div class="w3-round-xlarge w3-teal" style="height:24px;width:20%"></div>
           </div>
+          <p>C++</p>
+          <div class="w3-light-grey w3-round-xlarge">
+            <div class="w3-round-xlarge w3-teal" style="height:24px;width:10%"></div>
+          </div>
           <hr>
 
           <p class="w3-large w3-text-theme"><b><i class="fa fa-wrench fa-fw w3-margin-right w3-text-teal"></i>Tools</b></p>
