update resume with new experience

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <h2>== About ==</h2>
         <p>Greetings! I'm a machine learning engineer and applied mathematics graduate student with an interest for all things tech. Most of my professional work has been developing web apps that deploy ML services, but I have also done UI design, CI/CD work and Data Engineering.</p>
 
-        <p>My current focus on scaling large ML modeling training pipelines. I use tools like Ray and Spark and build training pipelines on AWS to help detect all the bad things that bad people are trying to do to your computer.</p>
+        <p>My current focus is on scaling large ML modeling training pipelines. I use tools like Ray and Spark and build training pipelines on AWS to help detect all the bad things that bad people are trying to do to your computer.</p>
 
         <p>My interests span the tech world. I try to keep track of a number of areas that I think could have big implications or are simply neat, such as neuromorphic computing, distributed systems research and homomorphic encryption (and AI of course, which is somewhat mainstream these days).</p>
 
@@ -129,11 +129,13 @@
 
         <h3>Machine Learning Engineer III — Crowdstrike</h3>
         <p><i>Apr 2025 – Current</i></p>
-        <p>- Developed and maintained large scale ML model training pipelines</p>
+        <p>- Develop and support distributed compute pipelines using Ray, AWS, and Apache Spark, optimizing reliability, resource utilization, and end-to-end throughput</p>
+        <p>- Build and maintain large-scale ML training platforms used by data scientists across the organization, enabling distributed experimentation and rapid model iteration</p>
+        <p>- Contribute to ongoing modernization of ML tooling by standardizing deployments, improving CI/CD integration, and automating infrastructure provisioning across training environments</p>
 
         <hr class="ascii">
 
-        <h3>Staff Machine Learning Engineer — Booz Allen Hamilton</h3>
+        <h3>Lead Data Engineer — Booz Allen Hamilton</h3>
         <p><i>Jan 2024 – Apr 2025</i></p>
         <p>- Performed as a Data Engineer for a prominent Enterprise data platform, utilized web scraping tools to gather documents, extract metadata, and organize data within AWS with automated jobs</p>
         <p>- Developed a full-stack document management solution deployed via Kubernetes, including backend/frontend development, web server optimization, testing enhancements, and database architecture</p>
